syntax = "proto3";

package auth;

option go_package = "github.com/Kai120789/learning_platform/learning_platform_proto/gen/go/auth";

service Auth {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc RefreshTokens (RefreshTokensRequest) returns (RefreshTokensResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
  rpc LogoutAll (LogoutAllRequest) returns (LogoutAllResponse);
  rpc ChangePassword (ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc ForceChangePassword (ForceChangePasswordRequest) returns (ForceChangePasswordResponse);
}

enum UserRole {
  ENUM_NAME_UNSPECIFIED = 0;
  TUTOR = 1;
  STUDENT = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse  {
  int64 user_id = 1;
  string session_id = 2;
  string access_token = 3;
}

message RegisterRequest {
  string email = 1;
  string name = 2;
  string surname = 3;
  optional string last_name = 4;
  UserRole role = 5;
  string password = 6;
}

message RegisterResponse {
  int64 user_id = 1;
  string session_id = 2;
  string access_token = 3;
}

message RefreshTokensRequest {
  string access_token = 1;
}

message RefreshTokensResponse {
  string access_token = 1;
}

message LogoutRequest {
  string access_token = 1;
}

message LogoutResponse {}

message LogoutAllRequest {
  int64 userId = 1;
}

message LogoutAllResponse {}

message ChangePasswordRequest {
  int64 user_id = 1;
  string old_password = 2;
  string new_password = 3;
}

message ChangePasswordResponse {
  string access_token = 1;
}

message ForceChangePasswordRequest {
  int64 user_id = 1;
}

message ForceChangePasswordResponse {}